# pubmed-data

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run.sh
pubmed_data/: process.py
