[tool.poetry]
name = "pubmed-data"
version = "0.0.1"
description = "Processing PubMed OA files"
authors = ["Ross Burton <Ross.Burton@zifornd.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.64.1"
pubmed-parser = {git = "https://github.com/titipata/pubmed_parser.git"}
pandas = "^1.5.3"
joblib = "^1.2.0"
pyarrow = "^11.0.0"
fastparquet = "^2023.2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
black = "^22.12.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-mock = "^1.0.0"
isort = "^5.11.3"
mypy = "^0.991"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
